--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
       margin-top: 20px;
       font-size: 24px;
     }
+    #progress-bar-container {
+      width: 100%;
+      background-color: #ccc;
+      border-radius: 15px;
+      margin-top: 20px;
+      height: 20px;
+      overflow: hidden;
+    }
+    #progress-bar {
+      width: 0%;
+      height: 100%;
+      background-color: #4CAF50;
+      border-radius: 15px;
+      transition: width 0.5s;
+    }
   </style>
 </head>
 <body>
@@ -86,6 +101,9 @@
     <button id="claim-prize-button" onclick="claimPrize()">Claim Prize</button>
     <div id="counter">0/197</div>
     <div id="hi-score">Hi-Score: <span id="high-score">0</span></div>
+    <div id="progress-bar-container">
+      <div id="progress-bar"></div>
+    </div>
   </div>
   <script>
     const countries = [
@@ -306,7 +324,7 @@
       const optionButtons = document.querySelectorAll(".option-button");
       optionButtons.forEach((button, index) => {
         button.innerText = countries[options[index]].name;
-        button.classList.remove("disabled", "correct", "incorrect");
+        button.className = 'option-button'; // Reset classes to default
         button.disabled = false;
       });
     }
@@ -331,6 +349,11 @@
         optionButtons[selectedIndex].classList.add("correct");
         score++;
         document.getElementById("counter").innerText = `${score}/197`;
+
+        // Update progress bar
+        let progressPercentage = (score / 197) * 100;
+        document.getElementById("progress-bar").style.width = progressPercentage + "%";
+
         if (score > highScore) {
           highScore = score;
           localStorage.setItem("highScore", highScore);
@@ -348,8 +371,8 @@
         optionButtons[selectedIndex].classList.add("incorrect");
         optionButtons[correctIndex].classList.add("correct");
         setTimeout(() => {
-        document.getElementById("reset-button").style.display = "block";
-      }, 1000);
+          document.getElementById("reset-button").style.display = "block";
+        }, 1000);
       }
     }
 
@@ -359,6 +382,15 @@
       document.getElementById("counter").innerText = `${score}/197`;
       document.getElementById("reset-button").style.display = "none";
       document.getElementById("claim-prize-button").style.display = "none";
+      document.getElementById("progress-bar").style.width = "0%";
+
+      // Reset option buttons
+      const optionButtons = document.querySelectorAll(".option-button");
+      optionButtons.forEach(button => {
+        button.className = 'option-button';
+        button.disabled = false;
+      });
+
       startGame();
     }
 
