--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       color: #004d40;
     }
     #quiz-container {
+      position: relative;
       margin-top: 50px;
       padding: 20px;
       background-color: #ffffff;
@@ -38,6 +39,7 @@
       border: 2px solid #004d40;
       border-radius: 10px;
       transition: background-color 0.3s, color 0.3s;
+      font-family: 'Bungee', cursive; /* Ensure font is applied */
     }
     /* Removed hover effect */
     /*
@@ -67,6 +69,7 @@
       border: 2px solid #004d40;
       border-radius: 10px;
       transition: background-color 0.3s, color 0.3s;
+      font-family: 'Bungee', cursive; /* Ensure font is applied */
     }
     #reset-button:hover, #claim-prize-button:hover {
       background-color: #b2dfdb;
@@ -74,6 +77,12 @@
     #counter {
       margin-top: 20px;
       font-size: 24px;
+      font-family: 'Bungee', cursive; /* Ensure font is applied */
+    }
+    #hi-score {
+      font-size: 18px;
+      font-family: 'Bungee', cursive; /* Ensure font is applied */
+      margin-bottom: 10px; /* Added margin to create space */
     }
     #progress-bar-container {
       position: relative;
@@ -103,6 +112,73 @@
       font-size: 14px;
       color: rgba(0, 0, 0, 0.5);
       pointer-events: none;
+      font-family: 'Bungee', cursive; /* Ensure font is applied */
+    }
+    /* Styles for the heart icon */
+    #bookmark-button {
+      position: absolute;
+      right: 10px;
+      bottom: 45px; /* Adjusted to position above the progress bar */
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 0;
+    }
+    #bookmark-icon {
+      width: 30px;
+      height: 30px;
+      opacity: 1; /* Full opacity */
+    }
+    /* Styles for the hint button */
+    #hint-button {
+      position: absolute;
+      left: 10px;
+      bottom: 45px; /* Adjusted to position above the progress bar */
+      background-color: #ffffff;
+      border: 2px solid #004d40;
+      border-radius: 5px;
+      cursor: pointer;
+      padding: 3px 6px; /* Reduced padding */
+      font-size: 12px; /* Reduced font size */
+      color: #004d40;
+      font-family: 'Bungee', cursive; /* Ensure font is applied */
+    }
+    /* Modal styles */
+    #bookmark-modal {
+      display: none; /* Hidden by default */
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    }
+    #bookmark-modal-content {
+      background-color: #ffffff;
+      margin: 15% auto;
+      padding: 20px;
+      border: 2px solid #004d40;
+      width: 80%;
+      max-width: 400px;
+      border-radius: 15px;
+      text-align: left;
+      font-family: 'Bungee', cursive; /* Ensure font is applied in modal */
+    }
+    #close-modal {
+      color: #aaaaaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+      font-family: 'Bungee', cursive; /* Ensure font is applied */
+    }
+    #close-modal:hover,
+    #close-modal:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -118,9 +194,23 @@
     <button id="claim-prize-button" onclick="claimPrize()">Claim Prize</button>
     <div id="counter">0/197</div>
     <div id="hi-score">Hi-Score: <span id="high-score">0</span></div>
+    <!-- Adjusted hint button -->
+    <button id="hint-button">Hints 3/3</button>
+    <!-- Bookmark button -->
+    <button id="bookmark-button">
+      <img id="bookmark-icon" src="data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20viewBox%3D%270%200%20100%20100%27%3E%3Cpath%20fill%3D%27%23ff0000%27%20d%3D%27M50%2091.6l-5.3-4.9C19.2%2062%200%2044.3%200%2023.5%200%2010.5%2010.5%200%2023.5%200c7.8%200%2014.7%203.7%2019%209.4C47.8%203.7%2054.7%200%2062.5%200%2075.5%200%2086%2010.5%2086%2023.5c0%2020.8-19.2%2038.5-44.7%2063.2L50%2091.6z%27/%3E%3C/svg%3E" alt="Heart Icon">
+    </button>
     <div id="progress-bar-container">
       <div id="progress-bar"></div>
       <div id="progress-text">Progress</div>
+    </div>
+  </div>
+  <!-- Bookmark Modal -->
+  <div id="bookmark-modal">
+    <div id="bookmark-modal-content">
+      <span id="close-modal">&times;</span>
+      <h2>Add to Bookmarks</h2>
+      <p id="bookmark-instructions"></p>
     </div>
   </div>
   <script>
@@ -327,6 +417,7 @@
     let currentCountryIndex;
     let score = 0;
     let highScore = localStorage.getItem("highScore") || 0;
+    let hintsRemaining = 3; // Initialize hints remaining
 
     document.getElementById("high-score").innerText = highScore;
 
@@ -338,13 +429,20 @@
       const currentCountry = remainingCountries[currentCountryIndex];
       document.getElementById("flag").src = currentCountry.flagUrl;
 
-      let options = generateOptions(currentCountry);
+      // Reset option buttons
       const optionButtons = document.querySelectorAll(".option-button");
-      optionButtons.forEach((button, index) => {
-        button.innerText = countries[options[index]].name;
+      optionButtons.forEach(button => {
+        button.style.display = 'block';
         button.className = 'option-button'; // Reset classes to default
         button.disabled = false;
       });
+
+      let options = generateOptions(currentCountry);
+      optionButtons.forEach((button, index) => {
+        button.innerText = countries[options[index]].name;
+      });
+
+      updateHintDisplay(); // Update hint display
     }
 
     function generateOptions(correctCountry) {
@@ -397,16 +495,20 @@
     function resetGame() {
       score = 0;
       remainingCountries = [...countries];
+      hintsRemaining = 3; // Reset hints
       document.getElementById("counter").innerText = `${score}/197`;
       document.getElementById("reset-button").style.display = "none";
       document.getElementById("claim-prize-button").style.display = "none";
       document.getElementById("progress-bar").style.width = "0%";
+      document.getElementById("hint-button").disabled = false; // Enable hint button
+      updateHintDisplay(); // Update hint display
 
       // Reset option buttons
       const optionButtons = document.querySelectorAll(".option-button");
       optionButtons.forEach(button => {
         button.className = 'option-button';
         button.disabled = false;
+        button.style.display = 'block';
       });
 
       startGame();
@@ -415,6 +517,90 @@
     function claimPrize() {
       window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
     }
+
+    // Hint functionality
+    function updateHintDisplay() {
+      document.getElementById('hint-button').innerText = `Hints ${hintsRemaining}/3`;
+      if (hintsRemaining === 0) {
+        document.getElementById('hint-button').disabled = true;
+      } else {
+        document.getElementById('hint-button').disabled = false;
+      }
+    }
+
+    function useHint() {
+      if (hintsRemaining > 0) {
+        const optionButtons = document.querySelectorAll('.option-button');
+        const visibleOptions = Array.from(optionButtons).filter(button => button.style.display !== 'none');
+        if (visibleOptions.length > 2) {
+          hintsRemaining--;
+          updateHintDisplay();
+
+          const correctCountryName = remainingCountries[currentCountryIndex].name;
+          const incorrectOptions = visibleOptions.filter(button => button.innerText !== correctCountryName);
+
+          if (incorrectOptions.length > 0) {
+            // Randomly select one incorrect option to remove
+            const buttonToRemove = incorrectOptions[Math.floor(Math.random() * incorrectOptions.length)];
+            buttonToRemove.style.display = 'none';
+          }
+        } else {
+          alert('Cannot use a hint when only two options remain.');
+        }
+      } else {
+        alert('No hints remaining.');
+      }
+    }
+
+    document.getElementById('hint-button').addEventListener('click', useHint);
+
+    // Bookmark functionality
+    const bookmarkButton = document.getElementById('bookmark-button');
+    const bookmarkModal = document.getElementById('bookmark-modal');
+    const closeModal = document.getElementById('close-modal');
+    const bookmarkInstructions = document.getElementById('bookmark-instructions');
+
+    bookmarkButton.addEventListener('click', () => {
+      // Detect device and show appropriate instructions
+      const userAgent = navigator.userAgent.toLowerCase();
+      if (/iphone|ipad|ipod/.test(userAgent)) {
+        // iOS device
+        bookmarkInstructions.innerHTML = `
+          <p>To add this game to your bookmarks:</p>
+          <ol>
+            <li>Tap the <strong>Share</strong> button at the bottom of the screen.</li>
+            <li>Scroll down and tap <strong>Add Bookmark</strong>.</li>
+            <li>Tap <strong>Save</strong> in the top-right corner.</li>
+          </ol>
+        `;
+      } else if (/android/.test(userAgent)) {
+        // Android device
+        bookmarkInstructions.innerHTML = `
+          <p>To add this game to your bookmarks:</p>
+          <ol>
+            <li>Tap the <strong>Menu</strong> button (three dots) at the top-right corner of the screen.</li>
+            <li>Tap the <strong>Star</strong> icon to bookmark this page.</li>
+          </ol>
+        `;
+      } else {
+        // Other devices
+        bookmarkInstructions.innerHTML = `
+          <p>To bookmark this page, please use your browser's bookmark feature.</p>
+        `;
+      }
+      bookmarkModal.style.display = 'block';
+    });
+
+    closeModal.addEventListener('click', () => {
+      bookmarkModal.style.display = 'none';
+    });
+
+    // Close the modal when clicking outside of it
+    window.addEventListener('click', (event) => {
+      if (event.target === bookmarkModal) {
+        bookmarkModal.style.display = 'none';
+      }
+    });
 
     window.onload = startGame;
   </script>
